Bug 1521312 - [Linux/Gtk+] Remove ui.GtkCSDReversedPlacement as it's broken and useless r=dao

Differential Revision: https://phabricator.services.mozilla.com/D18828