widget/nsXPLookAndFeel.cpp
@@ -78,7 +78,6 @@ nsLookAndFeelIntPref nsXPLookAndFeel::sIntPrefs[] = {
     {"ui.GtkCSDMinimizeButton", eIntID_GTKCSDMinimizeButton, false, 0},
     {"ui.GtkCSDMaximizeButton", eIntID_GTKCSDMaximizeButton, false, 0},
     {"ui.GtkCSDCloseButton", eIntID_GTKCSDCloseButton, false, 0},
-    {"ui.GtkCSDReversedPlacement", eIntID_GTKCSDReversedPlacement, false, 0},
     {"ui.systemUsesDarkTheme", eIntID_SystemUsesDarkTheme, false, 0},
     {"ui.prefersReducedMotion", eIntID_PrefersReducedMotion, false, 0},
     {"ui.primaryPointerCapabilities", eIntID_PrimaryPointerCapabilities, false,
